--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,7 +14,7 @@ Description: A lightweight and user-friendly toolkit for importing, cleaning, su
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
-RoxygenNote: 7.3.0
+RoxygenNote: 7.3.2
 Depends: R (>= 3.6.0)
 Imports:
     sf,
@@ -26,9 +26,11 @@ Imports:
     htmltools,
     utils,
     stats
+VignetteBuilder: knitr
 Suggests:
-    readxl,
     knitr,
+    rmarkdown,
+    readxl,
     kableExtra
 BugReports: https://github.com/taylorbcraft/ezTrack/issues
 URL: https://github.com/taylorbcraft/ezTrack
