--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,3 +6,7 @@ export(ez_map)
 export(ez_summary)
 export(ez_track)
 importFrom(magrittr,"%>%")
+importFrom(methods,as)
+importFrom(stats,complete.cases)
+importFrom(stats,median)
+importFrom(utils,read.csv)
