--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,23 @@ export(ez_latitude_plot)
 export(ez_map)
 export(ez_summary)
 export(ez_track)
+importFrom(ggplot2,aes)
+importFrom(ggplot2,facet_wrap)
+importFrom(ggplot2,geom_line)
+importFrom(ggplot2,ggplot)
+importFrom(ggplot2,labs)
+importFrom(ggplot2,scale_color_viridis_d)
+importFrom(ggplot2,scale_x_datetime)
+importFrom(ggplot2,theme)
+importFrom(ggplot2,theme_minimal)
+importFrom(leaflet,addCircleMarkers)
+importFrom(leaflet,addLayersControl)
+importFrom(leaflet,addLegend)
+importFrom(leaflet,addPolylines)
+importFrom(leaflet,addProviderTiles)
+importFrom(leaflet,colorFactor)
+importFrom(leaflet,layersControlOptions)
+importFrom(leaflet,leaflet)
 importFrom(magrittr,"%>%")
 importFrom(methods,as)
 importFrom(stats,complete.cases)
