--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -2,34 +2,36 @@ name: R-CMD-check
 
 on:
   push:
-    branches: [main]
+    branches: [main, master]
   pull_request:
-    branches: [main]
+    branches: [main, master]
 
 jobs:
   R-CMD-check:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        config:
+          - {os: ubuntu-latest,   r: 'release'}
+          - {os: macos-latest,    r: 'release'}
+          - {os: windows-latest,  r: 'release'}
+          - {os: ubuntu-latest,   r: 'devel'}
+          - {os: ubuntu-latest,   r: 'oldrel-1'}
+
+    name: ${{ matrix.config.os }} (R ${{ matrix.config.r }})
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v4
 
-      - name: Set up R
-        uses: r-lib/actions/setup-r@v2
+      - uses: r-lib/actions/setup-r@v2
+        with:
+          r-version: ${{ matrix.config.r }}
 
-      - name: Install system dependencies
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y libudunits2-dev libgdal-dev libgeos-dev libproj-dev
+      - uses: r-lib/actions/setup-pandoc@v2
 
-      - name: Install dependencies
-        run: |
-          install.packages("remotes")
-          remotes::install_deps(dependencies = TRUE)
-        shell: Rscript {0}
+      - uses: r-lib/actions/setup-r-dependencies@v2
+        with:
+          extra-packages: any::rcmdcheck
+          needs: check
 
-      - name: Check package
-        run: |
-          R CMD build .
-          PKG_TARBALL=$(ls -1t *.tar.gz | head -n 1)
-          R CMD check "$PKG_TARBALL" --no-manual --as-cran
+      - uses: r-lib/actions/check-r-package@v2
